--- a/index.html
+++ b/index.html
@@ -3,5 +3,15 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<nav>
+			<img src="logo.png">
+			<ul>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">Activities</a></li>
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Work in progress</a></li>
+				<li><a href="#">Contacts</a></li>
+			</ul>
+		</nav>
 	</body>
 </html>
