--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<li><a href="#">Activities</a></li>
 				<li><a href="#">About us</a></li>
 				<li><a href="#">Work in progress</a></li>
-				<li><a href="#">Contactss</a></li>
+				<li><a href="#">Contacts</a></li>
 			</ul>
 		</nav>
 	</body>
