--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	</head>
 	<body>
 		<nav>
-			<img src="logo.png">
-			<ul>
+			<img id="logo" src="logo.png">
+			<ul id="nav">
 				<li><a href="#">Projects</a></li>
 				<li><a href="#">Activities</a></li>
 				<li><a href="#">About us</a></li>
@@ -13,5 +13,28 @@
 				<li><a href="#">Contacts</a></li>
 			</ul>
 		</nav>
+	
+
+
+
+
+
+
+
+
+
+
+
+	<div id="projects">
+		<ul id="categories">
+			<li><img class="residential" src="Projects1.jpg"></li>
+			<li><img class="residential" src="Projects2.jpg"></li>
+			<li><img class="residential" src="Projects3.jpg"></li>
+			<li><img class="residential" src="Projects4.jpg"></li>
+			<li><img class="residential" src="Projects5.jpg"></li>
+			<li><img class="residential" src="Projects6.jpg"></li>
+			<li><img class="residential" src="Projects7.jpg"></li>
+		</ul>
+	</div>
 	</body>
 </html>
