--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 				<li><a href="#">Contacts</a></li>
 			</ul>
 		</nav>
-	
-
-
-
-
-
-
-
-
-
-
-
+		<img src="http://upload.wikimedia.org/wikipedia/commons/4/42/Leonardo_Glass_Cube_-_Corporate_architecture.jpg" >
+		<section >
+			<a href="#">Architectural and design agency</a>
+			<hr/>
+		</section>
+		<section>
+			<ul>
+				<li><a href="#">Research &</br> planning</a><hr/></li>
+				<li><a href="#">Design & </br> develpoment</a><hr/></li>
+				<li><a href="#">Management</a><hr/></li>
+			</ul>
+		</section>
 	<div id="projects">
 		<ul id="categories">
 			<li><img class="residential" src="Projects1.jpg"></li>
