--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 				<li><a href="#">Contacts</a></li>
 			</ul>
 		</nav>
-		<img src="http://upload.wikimedia.org/wikipedia/commons/4/42/Leonardo_Glass_Cube_-_Corporate_architecture.jpg" >
-		<section >
-			<a href="#">Architectural and design agency</a>
-			<hr/>
+		<img src="building.jpg" >
+		<section>
+			<div id="ArchDes">Architectural and design agency<hr/></div>
+			
 		</section>
 		<section>
 			<ul>
@@ -27,13 +27,22 @@
 		</section>
 	<div id="projects">
 		<ul id="categories">
-			<li><img class="residential" src="Projects1.jpg"></li>
-			<li><img class="residential" src="Projects2.jpg"></li>
-			<li><img class="residential" src="Projects3.jpg"></li>
-			<li><img class="residential" src="Projects4.jpg"></li>
-			<li><img class="residential" src="Projects5.jpg"></li>
-			<li><img class="residential" src="Projects6.jpg"></li>
-			<li><img class="residential" src="Projects7.jpg"></li>
+			<li><img class="project" src="Projects1.jpg"><div>Residental</div></li>
+			<li><img class="project" src="Projects2.jpg"><div>Academic</div></li>
+			<li><img class="project" src="Projects3.jpg"><div>Office&Public</div></li>
+			<li><img class="project" src="Projects4.jpg"><div>Banks</div></li>
+			<li><img class="project" src="Projects5.jpg"><div>Hotels</div></li>
+			<li><img class="project" src="Projects6.jpg"><div>Industrial</div></li>
+			<li><img class="project" src="Projects7.jpg"><div>Interior</div></li>
+		</ul>
+		<!--<ul id="tags">
+			<li>Residental</li>
+			<li>Academic</li>
+			<li>Office & Public</li>
+			<li>Banks</li>
+			<li>Hotels</li>
+			<li>Industrial</li>
+			<li>Interior</li>-->
 		</ul>
 	</div>
 	</body>
