--- a/index.html
+++ b/index.html
@@ -25,25 +25,23 @@
 				<li><a href="#">Management</a><hr/></li>
 			</ul>
 		</section>
-	<div id="projects">
 		<ul id="categories">
-			<li><img class="project" src="Projects1.jpg"><div>Residental</div></li>
-			<li><img class="project" src="Projects2.jpg"><div>Academic</div></li>
-			<li><img class="project" src="Projects3.jpg"><div>Office&Public</div></li>
-			<li><img class="project" src="Projects4.jpg"><div>Banks</div></li>
-			<li><img class="project" src="Projects5.jpg"><div>Hotels</div></li>
-			<li><img class="project" src="Projects6.jpg"><div>Industrial</div></li>
-			<li><img class="project" src="Projects7.jpg"><div>Interior</div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects1.jpg"></a></></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects2.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects3.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects4.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects5.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects6.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects7.jpg"></a></div></li>
 		</ul>
-		<!--<ul id="tags">
-			<li>Residental</li>
-			<li>Academic</li>
-			<li>Office & Public</li>
-			<li>Banks</li>
-			<li>Hotels</li>
-			<li>Industrial</li>
-			<li>Interior</li>-->
+		<ul id="names">
+			<li><a class="test" href="#">Residential</a></li>
+			<li><a class="test" href="#">Academic</a></li>
+			<li><a class="test" href="#">Office & public</a></li>
+			<li><a class="test" href="#">Banks</a></li>
+			<li><a class="test" href="#">Hotels</a></li>
+			<li><a class="test" href="#">Industrial</a></li>
+			<li><a class="test" href="#">Interior</a></li>
 		</ul>
-	</div>
 	</body>
 </html>
