--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<li><a href="#">Management</a><hr/></li>
 			</ul>
 		</section>
+		<!--end page1-->
 		<ul id="categories">
 			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects1.jpg"></a></></div></li>
 			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects2.jpg"></a></div></li>
@@ -42,6 +43,19 @@
 			<li><a class="test" href="#">Hotels</a></li>
 			<li><a class="test" href="#">Industrial</a></li>
 			<li><a class="test" href="#">Interior</a></li>
+		</ul>
+		<!--end page2-->
+		<ul id="circles">
+			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
+			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
+			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
+			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
+		</ul>
+		<ul id="ctext">
+			<li><a class="test" href="#">Residential</a></li>
+			<li><a class="test" href="#">Academic</a></li>
+			<li><a class="test" href="#">Office & public</a></li>
+			<li><a class="test" href="#">Banks</a></li>
 		</ul>
 	</body>
 </html>
