--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="https://maps.googleapis.com/maps/api/js"></script>
+		<script>
+function initialize() {
+
+        var map_canvas = document.getElementById('map_canvas');
+        var map_options = {
+          center: new google.maps.LatLng(42.677056,23.310686),
+          zoom: 19,
+          //scrollwheel: false,//
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        var map = new google.maps.Map(map_canvas, map_options)
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
 	</head>
 	<body>
 		<nav>
-			<img id="logo" src="logo.png">
+			<div id="beg"></div>
+			<a data-scroll data-options="easing: easeInOutQuart" href="#beg"><img id="logo" src="logo.png"></a>
 			<ul id="nav">
-				<li><a href="#">Projects</a></li>
+				<li><a data-scroll data-options="easing: easeInOutQuart" href="#categories">Projects</a></li>
+				<li><a data-scroll data-options="easing: easeInOutQuart" href="#names">About us</a></li>
 				<li><a href="#">Activities</a></li>
-				<li><a href="#">About us</a></li>
 				<li><a href="#">Work in progress</a></li>
-				<li><a href="#">Contacts</a></li>
+				<li><a data-scroll data-options="easing: easeInOutQuart" href="#contacts">Contacts</a></li>
 			</ul>
 		</nav>
 		<img src="building.jpg" >
@@ -27,9 +43,9 @@
 		</section>
 		<!--end page1-->
 		<ul id="categories">
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects1.jpg"></a></></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project"  src="Projects1.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects2.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects3.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="#"><img class="project"  id="ProjectsSc" src="Projects3.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects4.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects5.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects6.jpg"></a></div></li>
@@ -45,17 +61,52 @@
 			<li><a class="test" href="#">Interior</a></li>
 		</ul>
 		<!--end page2-->
-		<ul id="circles">
+		<ul id="circles" >
 			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
 			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
 			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
 			<li><img class="circular" src="http://38.media.tumblr.com/439d1e71890241d23addafc9790b7eaf/tumblr_n19uihdOa21s1kvj9o1_500.jpg"></li>
 		</ul>
 		<ul id="ctext">
-			<li><a class="test" href="#">Residential</a></li>
+			<li><a class="test" href="#">Company</a></li>
+			<li><a class="test" href="#">Exported</br> Services</a></li>
+			<li><a class="test" href="#">Technology</a></li>
+			<li><a class="test" href="#">Carrers</a></li>
+		</ul>
+		<div id="map_canvas"></div>
+		<ul id="adress">
+			<li><a id="contacts" class="test" href="#">Residential</a></li>
 			<li><a class="test" href="#">Academic</a></li>
 			<li><a class="test" href="#">Office & public</a></li>
 			<li><a class="test" href="#">Banks</a></li>
 		</ul>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		<script src="smooth-scroll.js"></script>
+		<script>
+    
+		smoothScroll.init({
+			speed: 1000,
+			easing: 'easeInOutCubic',
+			offset: 0,
+			updateURL: false,
+			callbackBefore: function ( toggle, anchor ) {},
+			callbackAfter: function ( toggle, anchor ) {}
+		});
+		</script>
 	</body>
 </html>
