--- a/indexbg.html
+++ b/indexbg.html
@@ -38,7 +38,7 @@ function initialize() {
 			<ul>
 				<li><a href="#">Проучване и</br> планиране</a><hr/></li>
 				<li><a href="#">Проектиране и</br> развитие</a><hr/></li>
-				<li><a href="#">Менижмънт</a><hr/></li>
+				<li><a href="#">Мениджмънт</a><hr/></li>
 			</ul>
 		</section>
 		<!--end page1-->
