Images are still hardcoded, but the project names and descriptions are extracted from the db. Import the database with phpmyadmin and run the indeh.html from localhost (start apache and mysql first)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ function initialize() {
 			<div id="beg"></div>
 			<a data-scroll data-options="easing: easeInOutQuart" href="#beg"><img id="logo" src="logo.png"></a>
 			<ul id="nav">
-				<li><a a data-scroll data-options="easing: easeInOutQuart" href="#beg">Home</a></li>
-				<li><a data-scroll data-options="easing: easeInOutQuart" href="#categories">Projects</a></li>
+				<li><a a data-scroll data-options="easing: easeInOutQuart" href="index.html#beg">Home</a></li>
+				<li><a data-scroll data-options="easing: easeInOutQuart" href="index.html#categories">Projects</a></li>
 				<li><a data-scroll data-options="easing: easeInOutQuart" href="#names">About us</a></li>
 				<li><a data-scroll data-options="easing: easeInOutQuart" href="#contacts">Contacts</a></li>
 			</ul>
@@ -48,13 +48,13 @@ function initialize() {
 		</section>
 		<!--end page1-->
 		<ul id="categories">
-			<li><div class="grow pic"><a class="test" href="#"><img class="project"  src="Projects1.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects2.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project"  id="ProjectsSc" src="Projects3.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects4.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects5.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects6.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="#"><img class="project" src="Projects7.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=1"><img class="project"  src="Projects1.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=2"><img class="project" src="Projects2.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=3"><img class="project"  id="ProjectsSc" src="Projects3.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=4"><img class="project" src="Projects4.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=5"><img class="project" src="Projects5.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=6"><<img class="project" src="Projects6.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=7"><img class="project" src="Projects7.jpg"></a></div></li>
 		</ul>
 		<ul id="names">
 			<li><a class="test" href="#">Residential</a></li>
