--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@ function initialize() {
 				<li><a data-scroll data-options="easing: easeInOutQuart" href="#contacts">Contacts</a></li>
 			</ul>
 		</nav>
-		<img src="building.jpg" >
+		<img src="building.jpg" />
 		<section>
 			<div id="ArchDes">Architectural and design agency<hr/></div>
-			
 		</section>
 		<section>
 			<ul>
