--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function initialize() {
 			<li><div class="grow pic"><a class="test" href="projects.php?cat=3"><img class="project"  id="ProjectsSc" src="Projects3.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="projects.php?cat=4"><img class="project" src="Projects4.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="projects.php?cat=5"><img class="project" src="Projects5.jpg"></a></div></li>
-			<li><div class="grow pic"><a class="test" href="projects.php?cat=6"><<img class="project" src="Projects6.jpg"></a></div></li>
+			<li><div class="grow pic"><a class="test" href="projects.php?cat=6"><img class="project" src="Projects6.jpg"></a></div></li>
 			<li><div class="grow pic"><a class="test" href="projects.php?cat=7"><img class="project" src="Projects7.jpg"></a></div></li>
 		</ul>
 		<ul id="names">
